--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-This small project is a clone of jQuery plugin named Raptorize, released under Beerware license :)
+This small project is a clone of jQuery plugin named Raptorize[1] in Qt, released under Beerware license :)
 
 1 - http://www.zurb.com/playground/jquery-raptorize?timed_launch=true
 
