--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 This small project is a clone of jQuery plugin named Raptorize[1] in Qt, released under Beerware license :)
 
+Credits: Chuck Testa, idea by Felipe Pardal
+
 Video: http://youtu.be/lltaLKjV1RY
 
 TODO: Rewrite using QGraphicsView
